2003-10-09  Daniel Jacobowitz  <drow@mvista.com>

	* dwarf2expr.c (execute_stack_op): Don't treat the frame base as
	a memory pointer.

2003-10-04  GDB Administrator  <gdbadmin@sourceware.org>

	* version.in:  Bump toversion 6.0.0.90.

2003-10-01  GDB Administrator  <gdbadmin@sourceware.org>

	* version.in: Bump to version 6.0.

2003-09-30  Andrew Cagney  <cagney@redhat.com>

	* rs6000-tdep.c (rs6000_gdbarch_init): Set the PowerOpen red zone
	to 224, not 220.

2003-09-29  Andrew Cagney  <cagney@redhat.com>

	* NEWS: Mention Objective-C.

2003-09-27  GDB Administrator  <gdbadmin@sourceware.org>

	* version.in: Bump to version 5.3.93.

2003-09-25  Andrew Cagney  <cagney@redhat.com>

	* NEWS: Mention the new backtrace mechanism, DWARF 2 CFI, hosted
	file I/O, multi-arch, TLS and NPTL, DWARF 2 Location Expressions,
	and Java.
	* PROBLEMS: Mention that mips*-*-*, powerpc*-*-*, sparc*-*-* and
	arm*-*-* do not use the new frame code.

2003-09-22  Jeff Johnston  <jjohnstn@redhat.com>

	Merge from mainline:
	2003-09-22  Jeff Johnston  <jjohnstn@redhat.com>

        * top.c (quit_force): Fix indirect call to quit_target so
        a struct qt_args pointer is passed.

2003-09-19  Daniel Jacobowitz  <drow@mvista.com>

	Merge from mainline:
	2003-09-15  Daniel Jacobowitz  <drow@mvista.com>

	* values.c (unpack_double): Call floatformat_is_valid.

2003-09-19  Jim Blandy  <jimb@redhat.com>

	Merge from mainline:
	
	2003-09-12  Jim Blandy  <jimb@redhat.com>

	* dbxread.c (read_dbx_symtab): Don't report an internal error if
	the file has no .data, .bss, or .rodata sections.  Instead wait
	until we see a variable alleged to live in one of those sections.

	2003-09-12  Jim Blandy  <jimb@redhat.com>

	* dbxread.c (read_dbx_symtab): If we have no .data section and no
	.bss section, presume that any variables we find live in the
	.rodata section.

	2003-09-12  Jim Blandy  <jimb@redhat.com>

	* dbxread.c (read_dbx_symtab): Add FIXME about finding section